# py-mongonnator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Pipfile  README.md  example.py  pyproject.toml  pytest.ini  setup.py  tox.ini
.github/workflows/: dev.yml  master.yml
mongonator/: __init__.py  exceptions.py  paginator.py  pointermixin.py  query.py  querymixin.py  settings.py  wrapper.py
tests/: test_paginator.py  test_pointermixin.py  test_query.py
